--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Moravians -- Missions'
 - !lcsh 'Labrador (N.L.) -- Description and travel'
 - !lcc 'F1001'
+- GITenberg
 title: 'Journal of a Voyage from Okkak, on the Coast of Labrador, to Ungava Bay, Westward
   of Cape Chudleigh
 
